fixing login/logout logic

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-      <div class="navbar-header">
+      <div class="navbar-header" *ngIf="isLoggedIn">
         <a class="navbar-brand logo" routerLink="/events">Events</a>
         <a class="navbar-brand logo" routerLink="/createEvent">Create Event</a>
         <a class="navbar-brand logo" routerLink="/about">User Info</a>
-        <a class="navbar-brand logo" style="float: right;" routerLink="/login">Logout</a>
+        <button class="navbar-brand logo" style="float: right; color: grey" (click)="logout()">Logout</button>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
       </div>
