Adding functionality for getting images from backend

--- a/src/app/image/image-detail/image-detail.component.html
+++ b/src/app/image/image-detail/image-detail.component.html
@@ -7,7 +7,7 @@
   <div class="row">
       <div class="col-md-12 caption-row">
         <span id="caption">
-          {{image.caption}}
+          <button style="font-size:40px;" (click)="return();"> Cancel </button>
         </span>
       </div>
   </div>
