--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,9 +1,12 @@
 <div class="row">
         <h2>Event Media</h2>
-        <button class="btn btn-lg btn-info" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
+        <button (click)="onReturn();">Return</button>
+        <input type="file" (change)="onFileSelected($event);">
+        <button (click)="onUpload();">Upload a file</button>
+        <!-- <button class="btn btn-lg btn-info" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button> -->
 
         <ul id="thumbnailsList">
-            <li *ngFor="let image of (visibleImages | imageFilter:filterBy)" >
+            <li *ngFor="let image of visibleImages" >
                 <a [routerLink] ="['/image', image.id]">
                     <img src="{{image.url}}" class="tn" width="200" height="160">
                 </a>
@@ -11,4 +14,4 @@
         </ul>
     </div>
 
-<button (click)="onReturn();">Return</button>
+
