--- a/src/app/image/image-detail/image-detail.component.css
+++ b/src/app/image/image-detail/image-detail.component.css
@@ -8,17 +8,17 @@
     align-content: center;
 }
 
-#caption{
+/* #caption{
   font-size: 1.5em;
   font-family: "Montserrat", sans-serif;
   padding: 18px;
   color: #222;
   background-color: #f5f5f5;
   border: 1px solid #bbb;
-  width: 900px;
-}
+  width: 500px;
+} */
 
 .caption-row{
-  padding: 24px;
+  padding: 12px;
   text-align: center;
 }
