--- a/src/app/events-list/events-list.component.css
+++ b/src/app/events-list/events-list.component.css
@@ -3,39 +3,54 @@
     background-color: #CFD8DC !important;
     color: white;
   }
-  .heroes {
+  .events {
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
     width: 15em;
   }
-  .heroes li {
+
+  .events .events-buttons {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    margin: 0 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width: 15em;
+  }
+  .events li {
     cursor: pointer;
     position: relative;
+    font-size:15px;
+    color:black;
     left: 0;
-    background-color: #EEE;
+    background-color: rgb(177, 129, 81);
     margin: .5em;
     padding: .3em 0;
     height: 50px;
     width: 1000px;
     border-radius: 4px;
   }
-  .heroes li.selected:hover {
-    background-color: #BBD8DC !important;
+  .events .event-wrapper {
+    background:red;
+  }
+  .events li.selected:hover {
+    background-color: rgb(114, 35, 10) !important;
     color: white;
   }
-  .heroes li:hover {
-    color: #607D8B;
-    background-color: #DDD;
+  .events li:hover {
+    color: rgb(227, 235, 240);
+    background-color: rgb(224, 54, 54);
     left: .1em;
   }
-  .heroes .text {
+  .events .text {
     position: relative;
     top: -3px;
   }
-  .heroes .badge {
+  .events .badge {
     display: inline-block;
-    font-size: small;
+    font-size: big;
     color: white;
     padding: 0.8em 0.7em 0 0.7em;
     background-color:#405061;
