--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,17 +1,16 @@
 <div class="row">
-        <h2>Event Media</h2>
-        <button (click)="onReturn();">Return</button>
-        <input type="file" (change)="onFileSelected($event.target.files);">
-        <button type="button" (click)="onUpload();">Upload a file</button>
-        <!-- <button class="btn btn-lg btn-info" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button> -->
+    <h2>Event Media</h2>
+    <button (click)="onReturn();">Return</button>
+    <input type="file" (change)="onFileSelected($event.target.files);">
+    <button type="button" (click)="onUpload();">Upload a file</button>
+    <!-- <button class="btn btn-lg btn-info" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button> -->
 
-        <ul id="thumbnailsList">
-            <li *ngFor="let image of visibleImages" >
-                <a [routerLink] ="['/image', image.id]">
-                    <img src="{{image.url}}" class="tn" width="200" height="160">
-                </a>
-            </li>
-        </ul>
-    </div>
+    <ul *ngIf="visibleImagess | async; else loading" id="thumbnailsList">
+        <li *ngFor="let image of visibleImages">
+            <a [routerLink]="['/image', image.id]">
+                <img [src]="image.url" class="tn" width="200" height="160">
+            </a>
+        </li>
+    </ul>
 
-
+</div>
